Bug 965593. Only use large z-index on root scroll frames to make overlay scrollbars draw above other content. r=roc
For non-root scroll frames this would lead to the scrollbars drawing above content outside the scroll frame and above everything in the scroll frame.

UltraBlame original commit: 477e7d2eb1d787ca25a7ab0c0892b2e1688ba3ec

--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -63,6 +63,29 @@ html
 xul
 |
 scrollbar
+[
+root
+=
+"
+true
+"
+]
+{
+position
+:
+relative
+;
+z
+-
+index
+:
+2147483647
+;
+}
+html
+xul
+|
+scrollbar
 {
 -
 moz
@@ -72,10 +95,6 @@ appearance
 none
 !
 important
-;
-position
-:
-relative
 ;
 background
 -
@@ -100,12 +119,6 @@ solid
 transparent
 !
 important
-;
-z
--
-index
-:
-2147483647
 ;
 pointer
 -
